libs/flake/commands/KoShapeUngroupCommand.h
@@ -21,14 +21,16 @@
 #ifndef KOSHAPEUNGROUPCOMMAND_H
 #define KOSHAPEUNGROUPCOMMAND_H
 
-#include "KoShapeGroupCommand.h"
-
 #include "kritaflake_export.h"
-
 #include <kundo2command.h>
+#include <QScopedPointer>
+
+class KoShape;
+class KoShapeGroup;
+class KoShapeContainer;
 
 /// The undo / redo command for ungrouping shapes
-class KRITAFLAKE_EXPORT KoShapeUngroupCommand : public KoShapeGroupCommand
+class KRITAFLAKE_EXPORT KoShapeUngroupCommand : public KUndo2Command
 {
 public:
     /**
@@ -39,10 +41,17 @@ public:
      */
     KoShapeUngroupCommand(KoShapeContainer *container, const QList<KoShape *> &shapes,
                           const QList<KoShape *> &topLevelShapes = QList<KoShape*>(), KUndo2Command *parent = 0);
+    ~KoShapeUngroupCommand();
+
     /// redo the command
     void redo() override;
     /// revert the actions done in redo
     void undo() override;
+
+private:
+    struct Private;
+    const QScopedPointer<Private> m_d;
+
 };
 
 #endif
