libs/flake/tests/TestShapeGroupCommand.h
@@ -36,15 +36,21 @@ private Q_SLOTS:
     void init();
     void cleanup();
     void testToplevelGroup();
-    void testSublevelGroup();
-    void testAddToToplevelGroup();
-    void testAddToSublevelGroup();
-    void testGroupStrokeShapes();
+    void testToplevelGroupWithExistingTransform();
+    void testToplevelGroupTransformLater();
+
+    void testToplevelGroupWithNormalization();
+
+    void testZIndexFromNowhere();
+    void testZIndexFromNowhereReordered();
+    void testZIndexFromSameGroup();
+
+    void testUngrouping();
 
 private:
     KoShapeGroup *toplevelGroup, *sublevelGroup, *strokeGroup;
     KUndo2Command *cmd1, *cmd2, *strokeCmd;
-    MockShape *toplevelShape1, *toplevelShape2;
+    MockShape *toplevelShape1, *toplevelShape2, *toplevelShape3, *toplevelShape4;
     MockShape *sublevelShape1, *sublevelShape2;
     MockShape *extraShape1, *extraShape2;
     MockShape *strokeShape1, *strokeShape2;
